# WeatherTextGenerator

./: CMakeLists.txt  README.md
res/: asdasd.txt  db.db  input_recent  output_recent  strings.h  test_table.txt
src/: analprop.h  analysis.h  forecast.h  forecastprop.h  main.c  property.h
src/db/: db_interface.c  db_interface.h  sqlite3.h
src/generation/: generation.c  generation.h
src/models/: analprop.h  cases.h  db_models.h  forecastprop.h  property.h  propertyTypes.h
src/stepan/: analysis.h  forecast.h
src/ui/: ui.c  ui.h
